fix: bugs on mobile devices

--- a/bar-karaoke/src/components/header/header.module.scss
+++ b/bar-karaoke/src/components/header/header.module.scss
@@ -35,7 +35,14 @@
     cursor: pointer;
     width: 24px;
     height: 24px;
-    vertical-align: middle;
+    position: relative;
+    padding: 15px 20px;
+    & svg {
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      left: 50%;
+    }
     &:hover svg {
       transition: fill .2s linear;
       fill: var(--gold) !important;
@@ -110,14 +117,17 @@
     text-transform: uppercase;
     font-size: 13px;
     letter-spacing: 1px;
+    padding: 15px 20px;
     cursor: pointer;
     &:hover {
       color: var(--gold) !important;
       border-color: var(--gold) !important;
     }
-    &_active {
-      padding: 4px 0;
-      border-bottom: 2px solid var(--black);
+    &_active::after {
+      content: "";
+      display: block;
+      padding-top: 2px;
+      border-bottom: 2px solid currentColor;
     }
   }
 }
@@ -147,8 +157,9 @@
     &__media {
       margin-top: 2rem;
       opacity: 0.9;
+      padding-left: 0;
       & svg {
-              fill: var(--white) !important;
+        fill: var(--white) !important;
       }
     }
   }
@@ -199,6 +210,8 @@
       margin-top: 2rem;
     }
     &__link, &__link_active {
+      padding-left: 0;
+      padding-right: 40px;
       opacity: 0.9;
       color: var(--white) !important;
       &_active {
