--- a/bar-karaoke/src/styles/globals.css
+++ b/bar-karaoke/src/styles/globals.css
@@ -23,7 +23,6 @@ body {
   box-sizing: border-box;
   font-weight: inherit;
   font-size: inherit;
-  user-select: none;
 }
 
 body {
